--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 role="heading">My Portfolio</h1>
+
+  <!-- Navigation bar with ARIA role -->
+  <nav role="navigation">
+    <ul role="list">
+      <li role="listitem"><a href="#about">About Me</a></li>
+      <li role="listitem"><a href="#projects">Projects</a></li>
+      <li role="listitem"><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Image with ARIA role and alt text -->
+  <img role="img" src="profile.jpg" alt="Profile picture of John Doe" />
+
+  <!-- Brief description paragraph -->
+  <p>Hello! I am a web developer passionate about creating accessible websites.</p>
+
+  <!-- List with ARIA roles -->
+  <ul role="list">
+    <li role="listitem">HTML5 & CSS3</li>
+    <li role="listitem">JavaScript & React</li>
+    <li role="listitem">Accessibility & ARIA</li>
+  </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
